<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/page_bg">

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_size_1"
        android:background="@color/main_bottom_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_size_1"
        android:orientation="horizontal"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rl_tab_home"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/widget_size_3">

            <ImageView
                android:id="@+id/iv_tab_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/widget_size_3"
                android:src="@drawable/selector_tab_home"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_tab_home"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/widget_size_1"
                android:textSize="@dimen/font_size_14"
                android:textColor="@drawable/selector_tab_text"
                android:text="@string/stringValue1"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_tab_tribe"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_tab_tribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/widget_size_3"
                android:src="@drawable/selector_tab_tribe"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_tab_tribe"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/widget_size_1"
                android:textSize="@dimen/font_size_14"
                android:textColor="@drawable/selector_tab_text"
                android:text="@string/stringValue2"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_tab_match"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/widget_size_3">

            <ImageView
                android:id="@+id/iv_tab_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/widget_size_3"
                android:src="@drawable/selector_tab_match"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_tab_match"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/widget_size_1"
                android:textSize="@dimen/font_size_14"
                android:textColor="@drawable/selector_tab_text"
                android:text="@string/stringValue3"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_tab_data"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/widget_size_3">

            <ImageView
                android:id="@+id/iv_tab_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/widget_size_3"
                android:src="@drawable/selector_tab_data"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_tab_date"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/widget_size_1"
                android:textSize="@dimen/font_size_14"
                android:textColor="@drawable/selector_tab_text"
                android:text="@string/stringValue4"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_tab_mine"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/widget_size_3">

            <ImageView
                android:id="@+id/iv_tab_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/widget_size_3"
                android:src="@drawable/selector_tab_mine"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_tab_mine"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/widget_size_1"
                android:textSize="@dimen/font_size_14"
                android:textColor="@drawable/selector_tab_text"
                android:text="@string/stringValue5"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
